Format changes commint first

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2 id="hello">Kia ora,</h2>
 
             <p>I&rsquo;m a self motivated Front-End Developer &amp; .Net Developer who loves to learn and create. 
-            I have 3+ years of experience and feel I would be a great asset to any development or design team. I strive to deliver quality work through focused research and endeavour to be at the edge of emerging technology.</p>
+            I have 3+ years of experience and feel that I would be a great asset to any development or design team. I strive to deliver quality work through focused research and endeavour to be at the edge of emerging technology.</p>
 
             <div class="grid">
                 <div class="col -span-cols-6 -m-right-2">
@@ -46,16 +46,16 @@
 
                     <h6 id="feb-2015-present"><em>Feb 2015 - Present</em></h6>
 
-                    <h3 id="solutiondynamics-dotnetdeveloper">Scantech/Socution Dynamics - .Net Developer</h3>
+                    <h3 id="solutiondynamics-dotnetdeveloper">Scantech/Solution Dynamics - .Net Developer</h3>
 
-                    <p>Working within an Agile development environment as .Net Developer for the web and windows aplications development and maintenance. 
-                    Role established UI and component guidelines to ensure the clear direction &amp; alignment of a consistent UI for both sales and users. Worked closely with other dev-team leaders, end users and clients to bring a consistent vision for the applications delivered and used by the wider business.</p>
+                    <p>Working within an Agile development environment as a .Net Developer for the web and windows aplications development and maintenance. 
+                    Role established UI and component guidelines to ensure the clear direction &amp; alignment of a consistent UI for the end users. Worked closely with other dev-team leaders and sales to bring a consistent vision for the applications.</p>
 
                     <ul>
-                        <li>Produced and maintained data digitalizing softwares </li>
-                        <li>Managed UI guidelines within the Application Development team.</li>
-                        <li>Designed &amp; Implemented a web-based responsive account payble &amp; receivable secure application for non-IT and accounting users.</li>
-                        <li>Design &amp; Implemented graphical layout of outstanding work for the management level.</li>
+                        <li>Produce and maintaine data digitalizing softwares </li>
+                        <li>Manage UI guidelines within the Application Development team.</li>
+                        <li>Designe &amp; Implemente a web-based responsive account payble &amp; receivable secure application.</li>
+                        
                     </ul>
 
                     <h6 id="augusr-october-2014"><em>Aug - Oct 2014</em></h6>
