Format change commint second

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                     <h3 id="tatvasoft-ltd-front-end-developer">Tatvasoft Ltd — Web Developer</h3>
 
                     <p>
-                       Strated as Intern and eventually became imeportant part of team. I worked in small development team, responsible for all front-facing aspects of insurance service site for United states client.
+                       Started as Intern and eventually became an responsible part of team. I worked in small development team, responsible for all front-facing aspects of insurance service site for United states client.
                        </p>
 
                     <ul>
-                        <li>Worked with Senior developers, designers and insurance service provider to understand a brief based on insurance terms.</li>
-                        <li>Became more focused on registeration forms across different mobile devices, and how to enrich small screen web experiences for different insurance type.</li>
+                        <li>Worked with Senior developers, designers and insurance service provider to understand a brief of insurance terms.</li>
+                        <li>Delivered insurance website for the www.insurox.com</li>
                     </ul>
 
                     
@@ -115,7 +115,7 @@
                     <dl>
                         <dt><strong>Language:</strong>
 
-                        <dd>confident English speaker with Hindi Language proficiency</dd></dt>
+                        <dd>Fluent English speaker with Hindi Language proficiency</dd></dt>
                     </dl>
 
                     <h2 id="hobbies-interests">Hobbies/Interests</h2>
