--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400i,500,800" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:200,400,400i,600,900" rel="stylesheet" />
 
-    <link href='css/FCC/fix.css' rel='stylesheet' type="text/css" />
-    <link href='css/FCC/CV.css' rel='stylesheet' type="text/css" />
+    <link href='css/fix.css' rel='stylesheet' type="text/css" />
+    <link href='css/Style.css' rel='stylesheet' type="text/css" />
 
 
 </head>
