--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                     <h6 id="feb-2015-present"><em>Aug 2009 - Feb 2013</em></h6>
 
-                    <h3 id="solutiondynamics-dotnetdeveloper">Charotar University of Science & Technology - India </h3>
+                    <h3 id="solutiondynamics-dotnetdeveloper">Charotar University of Science & Technology </h3>
 
                     <p>
                         Bachelor of computer science - GPA 8.42/10
