--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <p>I am fiend of Succulents and sale them to my internal connections to support pink ribbon during a month of October.</p>
 
 
-                    <h2 id="references">Contacts</h2>
+                    <h2 id="Contacts">Contact Details</h2>
 
 
                     <ul>
