--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
         </main>
         <footer class="-m-auto -border-top -em-08 -lineheight-1-3 footer -text-left">
 
-            <!-- <div class="-text-center -print-hidden">
-                 <a href="assets/tim-clulow-cv.pdf" class="download"><span class="download-icon"></span>Download this as a pdf</a>
-             </div>-->
-            <em class="-clearfix -text-center lastpublished -em-07">Last updated on Friday, August 3, 2018, Portfolio upon request (I'm still working on it)</em>
+             <div class="-text-center -print-hidden">
+                 <a href="cv.pdf" class="download"><span class="download-icon"></span>Download this as a pdf</a>
+             </div>
+            <em class="-clearfix -text-center lastpublished -em-07">Last updated on Friday, August 3, 2018, Portfolio on <a href="http://www.monikapatel.info/" target="_blank">www.monikapatel.info</a></em>
         </footer>
 
     </div>
