Add file via upload
Replace index.html with newer version - portfolio link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -132,7 +132,7 @@
                     <p>I am fiend of Succulents and sale them to my internal connections to support pink ribbon during a month of October.</p>
 
 
-                    <h2 id="Contacts">Contact Details</h2>
+                    <h2 id="Contacts">Contact Info</h2>
 
 
                     <ul>
