Update summary content
Replace front end developer with Full stack developer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 id="monikapatel">Monika Patel</h1>
 
             <p>
-                I&rsquo;m a self-motivated Front-End Developer &amp; Web Developer who loves to learn and create.
+                I&rsquo;m a self-motivated Full Stack Developer who loves to learn and create.
                 I have 3+ years of experience and feel that I would be a great asset to any development or design team. I strive to deliver quality work through focused research and endeavour to be at the edge of emerging technology.
             </p>
 
