Add more details in other section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <p>
                 I&rsquo;m a self-motivated Full Stack Developer who loves to learn and create.
-                I have 3+ years of experience and feel that I would be a great asset to any development or design team. I strive to deliver quality work through focused research and endeavour to be at the edge of emerging technology.
+                I have 3+ years of experience and feel that I would be a great asset to any development or design team. I strive to deliver quality work through focused research and endeavor to be at the edge of emerging technology.
             </p>
 
             <div class="grid">
@@ -38,7 +38,7 @@
 
                     <h6 id="feb-2015-present"><em>Feb 2015 - Present</em></h6>
 
-                    <h3 id="solutiondynamics-dotnetdeveloper">Scantech/Solution Dynamics - .Net Developer</h3>
+                    <h3 id="solutiondynamics-dotnetdeveloper">Solution Dynamics - DOT Net Developer</h3>
 
                     <p>
                         Working within an Agile development environment as a .Net Developer for the web and windows applications development and maintenance.
@@ -46,10 +46,10 @@
                     </p>
 
                     <ul>
-                        <li>Produce and maintain data digitalizing software applications.</li>
+                        <li>Produce and maintain data digitalizing fully automated software mainly for the scanning bureau.</li>
                         <li>Manage UI guidelines within the Application Development team.</li>
-                        <li>Understanding of repeatable automated processes for building the application, testing it, documenting it, and deploying it at scale.</li>
-
+                        <li>Design eye-catching and fully functional visual reports from the huge database.</li>
+						<li>Responsible for designing and testing HTML Email templates from the photoshopped or sketched files for all the SDL clients.</li>
                     </ul>
 
                     <h6 id="augusr-october-2014"><em>Aug - Oct 2014</em></h6>
@@ -59,8 +59,10 @@
                     <p>I was part of a small development team, responsible for all front-facing aspects of ACE rental’s sites. Worked on Google analytics, tag manager &amp; Adwords for specifically New Zealand site.</p>
 
                     <ul>
-                        <li>Re-Built &amp; Maintained a large number of user-friendly, content-managed websites using bootstrap and jQuery frameworks.</li>
-                        <li>Became more focused on online booking forms across different mobile devices, and how to enrich small screen web experiences.</li>
+                        <li>Re-designed rental cars' portal website for both Australia and New Zealand from scratch.</li>
+                        <li>Became more focused on the online booking form across different devices and how to enrich small screen web experiences.</li>
+						<li>Managed google analytics, tag manager and ads for the New Zealand portal.</li>
+						<li>Design an attractive email signature for the company's email</li>						
                     </ul>
 
                     <h6 id="january-2014-march-2015"><em>Jan 2013 - Mar 2014</em></h6>
@@ -68,12 +70,12 @@
                     <h3 id="tatvasoft-ltd-front-end-developer">Tatvasoft Ltd — Web Developer</h3>
 
                     <p>
-                        Started as Intern and eventually became an responsible part of team. I worked in small development team, responsible for all front-facing aspects of insurance service site for United states client.
+                        Started as Intern and eventually became a responsible part of the small development team, focusing mainly on front-end aspects.
                     </p>
 
                     <ul>
-                        <li>Worked with Senior developers, designers and insurance service provider to understand a brief of insurance terms.</li>
-                        <li>Delivered insurance website for the www.insurox.com</li>
+                        <li>Worked with Senior developers, designers, and insurance service provider to understand a brief of insurance terms.</li>
+                        <li>Delivered insurance website for the <a href="www.insurox.com" target="blank">www.insurox.com</a></li>
                     </ul>
 
                     <h2 id="professional-experience">Education</h2>
@@ -92,29 +94,28 @@
                     <h4 id="fluent-with">Fluent with</h4>
 
                     <ul>
-
-                        <li>Photoshop CS6</li>
-                        <li>CorelDraw X7</li>
+						<li>Photoshop CS6</li>
                         <li>HTML5</li>
-                        <li>CSS3, grid and flexbox, bootstrap</li>
-                        <li>Java Script, jQuery</li>
-                        <li>VB.Net</li>
+                        <li>CSS3</li>
+						<li>CSS Grid, Flexbox, Bootstrap 3.X+</li>
+                        <li>JavaScript & jQuery</li>
+						<li>React JS and Redux</li>
                         <li>C#</li>
-                        <li>WF/WCF/WPF</li>
-                        <li>MS SQL Server</li>
+						<li>Regular Expressions</li>
+                        <li>SQL, MySQL, NoSQL</li>
+						<li>Jira - Agile Methodology</li>
+						<li>GIT command & Source Tree</li>
                     </ul>
 
                     <h4 id="familiar-with">Familiar with</h4>
 
                     <ul>
                         <li>Adobe Illustrator</li>
-                        <li>Reacts</li>
+                        <li>Vue JS</li>
                         <li>WordPress</li>
-                        <li>Sliver Strip</li>
                         <li>SASS &amp; LESS</li>
                         <li>ES6</li>
-                        <li>MVC</li>
-
+                        
                     </ul>
 
 
@@ -126,12 +127,19 @@
 
                         <dd>Fluent English speaker with Hindi Language proficiency</dd></dt>
                     </dl>
+					<dl>
+                        <dt><strong>tools:</strong>
 
-                    <h2 id="hobbies-interests">Hobbies/Interests</h2>
+                        <dd>Leadtools 19, SyncFusion, DevExpress</dd></dt>
+                    </dl>
+					<dl>
+                        <dt><strong>Self-Learning</strong>
 
-                    <p>I am fiend of Succulents and sale them to my internal connections to support pink ribbon during a month of October.</p>
+                        <dd>Taking Udemy brush up courses
+Reading & Knowledge boost from Medium articles</dd></dt>
+                    </dl>
 
-
+                    
                     <h2 id="Contacts">Contact Info</h2>
 
 
@@ -151,7 +159,7 @@
              <div class="-text-center -print-hidden">
                  <a href="/assets/monika-patel-cv.pdf" class="download"><span class="download-icon"></span>Download this as a pdf</a>
              </div>
-            <em class="-clearfix -text-center lastpublished -em-07">Last updated on Friday, August 3, 2018, Portfolio on <a href="http://www.monikapatel.info/" target="_blank">www.monikapatel.info</a></em>
+            <em class="-clearfix -text-center lastpublished -em-07">Last updated on Monday, September 24, 2018, Portfolio on <a href="http://www.monikapatel.info/" target="_blank">www.monikapatel.info</a></em>
         </footer>
 
     </div>
