update html file

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <h3 id="ace-cars-rental-front-end-developer">ACE cars rental — Front End Developer</h3>
 
-                    <p>I was part of a small development team, responsible for all front-facing aspects of ACE rental’s sites. Worked on Google analytics, tag manager &amp; Adwords for specifically New Zealand site.</p>
+                    <p>I was part of a small development team, responsible for all front-facing aspects of ACE rental’s sites. </p>
 
                     <ul>
                         <li>Re-designed rental cars' portal website for both Australia and New Zealand from scratch.</li>
@@ -135,8 +135,7 @@
 					<dl>
                         <dt><strong>Self-Learning</strong>
 
-                        <dd>Taking Udemy brush up courses
-Reading & Knowledge boost from Medium articles</dd></dt>
+                        <dd>Taking Udemy brush up courses & Knowledge boost from Medium articles</dd></dt>
                     </dl>
 
                     
