Remove tools section from right side

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>CV Monika Patel</title>
+    <title>Resume - Monika Patel</title>
 
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -49,7 +49,7 @@
                         <li>Produce and maintain data digitalizing fully automated software mainly for the scanning bureau.</li>
                         <li>Manage UI guidelines within the Application Development team.</li>
                         <li>Design eye-catching and fully functional visual reports from the huge database.</li>
-						<li>Responsible for designing and testing HTML Email templates from the photoshopped or sketched files for all the SDL clients.</li>
+						<li>Responsible for designing and testing HTML Email templates for all the SDL clients.</li>
                     </ul>
 
                     <h6 id="augusr-october-2014"><em>Aug - Oct 2014</em></h6>
@@ -127,11 +127,7 @@
 
                         <dd>Fluent English speaker with Hindi Language proficiency</dd></dt>
                     </dl>
-					<dl>
-                        <dt><strong>tools:</strong>
-
-                        <dd>Leadtools 19, SyncFusion, DevExpress</dd></dt>
-                    </dl>
+					
 					<dl>
                         <dt><strong>Self-Learning</strong>
 
