--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
         </main>
         <footer class="-m-auto -border-top -em-08 -lineheight-1-3 footer -text-left">
 
-             <!--div class="-text-center -print-hidden">
+             <div class="-text-center -print-hidden">
                  <a href="/assets/monika-patel-cv.pdf" class="download"><span class="download-icon"></span>Download this as a pdf</a>
-             </div-->
+             </div>
             <em class="-clearfix -text-center lastpublished -em-07">Last updated on Tuesday, October 23, 2018, Portfolio on <a href="http://www.monikapatel.info/" target="_blank">www.monikapatel.info</a></em>
         </footer>
 
