--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en" >
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
-<meta property="og:title" content="Monika Patel | Full Stack Developer" />
-<meta property="og:url" content="https://monikapatelit.github.io/MonikaPatel_info/" />
+<title>Monika Patel | Full Stack Developer</title>
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
+    <meta property="og:title" content="Monika Patel | Full Stack Developer" />
+<meta property="og:url" content="http://monikapatel.info/" />
 
 <meta property="og:image" content="https://res.cloudinary.com/dd9qptaih/image/upload/v1537312806/monika-info_h700Xw1200.png" />
 <meta property="og:image:secure_url" content="https://res.cloudinary.com/dd9qptaih/image/upload/v1537312806/monika-info_h700Xw1200.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="400" />
 <meta property="og:image:height" content="300" />
-<meta property="og:image:alt" content="I'm Monika Patel" />
+<meta property="og:image:alt" content="Monika Patel | Full Stack Developer" />
 
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Monika Patel | Full Stack Developer" />
@@ -27,20 +31,24 @@
 <meta name="twitter:image" content="https://res.cloudinary.com/dd9qptaih/image/upload/v1537312806/monika-info_h700Xw1200.png" />
 <meta name="description" content="I am a Full Stack Developer and CHARUSAT alumnus.The succulent, design, people &amp; technology are core to all my personal and professional ambitions." />
   
-  <title>Monika Patel | Full Stack Developer</title>
-  
-  
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.1.0/css/all.css'>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
+  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.1.0/css/all.css'>
+  <link href="css/BootStrap_4.1.1.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114049284-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      <link rel="stylesheet" href="css/style.css">
-
-  
+        gtag('config', 'UA-114049284-1');
+    </script>
 </head>
 
 <body>
 
-  <header id="header" class="d-flex align-items-center headerImg low_qua_Img" data-src="http://monikapatel.info/images/m4_lg.jpg">
+  <header id="header" class="d-flex align-items-center headerImg low_qua_Img" data-src="images/m4_lg.jpg">
   <div class="container text-center">
     <div class="row align-center my-auto">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 justify-content-center  pt-5 py-5" id="header-title">
@@ -55,7 +63,7 @@
     </div>
   </div>
 </header>
-<section id="work" ">
+<section id="work" >
   <div class="container text-center">
     <div class="row align-center my-auto">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 justify-content-center  pt-5 py-2">
@@ -68,7 +76,7 @@
     <div class="row align-center my-auto p-3 d-flex">
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 text-center mb-3">
         <div class="role-image">
-          <img src="http://monikapatel.info/images/work/sdl_low.png" alt="solution dynamics" class="img-thumbnail low_qua_Img" data-src="http://monikapatel.info/images/work/sdl.png" />
+          <img src="/images/work/sdl_low.png" alt="solution dynamics" class="img-thumbnail low_qua_Img" data-src="/images/work/sdl.png" />
         </div>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6 role-details">
@@ -86,7 +94,7 @@
     <div class="row align-center my-auto p-3 d-flex">
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 text-center mb-3">
         <div class="role-image">
-          <img src="http://monikapatel.info/images/work/ace_low.png" alt="ace cars rental" class="img-thumbnail low_qua_Img" data-src="http://monikapatel.info/images/work/ace.png" />
+          <img src="/images/work/ace_low.png" alt="ace cars rental" class="img-thumbnail low_qua_Img" data-src="/images/work/ace.png" />
         </div>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6  role-details">
@@ -105,7 +113,7 @@
     <div class="row align-center my-auto p-3 d-flex">
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 text-center mb-3">
         <div class="role-image">
-          <img src="http://monikapatel.info/images/work/tatvasoft_low.png" class="img-thumbnail low_qua_Img" alt="tatvasoft" data-src="http://monikapatel.info/images/work/tatvasoft.png" />
+          <img src="/images/work/tatvasoft_low.png" class="img-thumbnail low_qua_Img" alt="tatvasoft" data-src="/images/work/tatvasoft.png" />
         </div>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6 role-details">
@@ -122,7 +130,7 @@
     <div class="row align-center my-auto p-3 d-flex">
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 text-center mb-3">
         <div class="role-image">
-          <img src="http://monikapatel.info/images/work/charusat_low.png" alt="Charusat" class="img-thumbnail low_qua_Img" data-src="http://monikapatel.info/images/work/charusat.png" />
+          <img src="/images/work/charusat_low.png" alt="Charusat" class="img-thumbnail low_qua_Img" data-src="/images/work/charusat.png" />
         </div>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6 role-details ">
@@ -145,9 +153,9 @@
     <div class="row align-center my-auto">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 justify-content-center  pt-5 py-5">
         <h2 class="section-title text-decoration-background  ">
-          <p><strong>In the pastime</strong></p>
+          <p><strong>In the Lab time</strong></p>
         </h2>
-        <p>I can be found at nearest park with my infinitely patient husband. </p>
+        <p>I can be found at nearest park with my infinitely patient husband if I am not busy working on my side projects. </p>
       </div>
     </div>
   </div>
@@ -189,14 +197,7 @@
   </div>
 </footer>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-
-  
-
-    <script  src="js/index.js"></script>
-
-
-
-
+<script  src="js/index.js"></script>
 </body>
 
 </html>
