updated link to image location

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="row align-center my-auto p-3 d-flex">
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 text-center mb-3">
         <div class="role-image">
-          <img src="/images/work/ace_low.png" alt="ace cars rental" class="img-thumbnail low_qua_Img" data-src="/images/work/ace.png" />
+          <img src="/images/work/ACE_low.png" alt="ace cars rental" class="img-thumbnail low_qua_Img" data-src="/images/work/ACE.png" />
         </div>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6  role-details">
@@ -113,7 +113,7 @@
     <div class="row align-center my-auto p-3 d-flex">
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 text-center mb-3">
         <div class="role-image">
-          <img src="/images/work/tatvasoft_low.png" class="img-thumbnail low_qua_Img" alt="tatvasoft" data-src="/images/work/tatvasoft.png" />
+          <img src="/images/work/Tatvasoft_low.png" class="img-thumbnail low_qua_Img" alt="tatvasoft" data-src="/images/work/Tatvasoft.png" />
         </div>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6 role-details">
