Update website snippet description

--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
 
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Monika Patel | Full Stack Developer" />
-<meta property="og:description" content="I am a Full Stack Developer and CHARUSAT alumnus.The succulent, design, people &amp; technology are core to all my personal and professional ambitions." />
+<meta property="og:description" content="A Self-motivated Software Developer with over 4 years of professional experience in .Net Web/Windows applications development.Experienced working with agile methodology and sprint-based development with strong analytical, debugging & problem-solving skills.
+Excellent communication skills with strong background, working directly with clients to identify business objectives and establish requirements.Ability to adapt new technologies and perform at high level to meet deadlines, adapt to ever changing priorities effective in working independently as well in teams." />
 <meta itemprop="name" content="Monika Patel | Full Stack Developer" />
 
-<meta itemprop="description" content="I am a Full Stack Developer and CHARUSAT alumnus.The succulent, design, people &amp; technology are core to all my personal and professional ambitions." />
+<meta itemprop="description" content="A Self-motivated Software Developer with over 4 years of professional experience in .Net Web/Windows applications development.Experienced working with agile methodology and sprint-based development with strong analytical, debugging & problem-solving skills.
+Excellent communication skills with strong background, working directly with clients to identify business objectives and establish requirements.Ability to adapt new technologies and perform at high level to meet deadlines, adapt to ever changing priorities effective in working independently as well in teams." />
 <meta itemprop="image" content="https://res.cloudinary.com/dd9qptaih/image/upload/v1537312806/monika-info_h700Xw1200.png" />
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Monika Patel | Full Stack Developer" />
-<meta name="twitter:description" content="I am a Full Stack Developer and CHARUSAT alumnus.The succulent, design, people &amp; technology are core to all my personal and professional ambitions." />
+<meta name="twitter:description" content="A Self-motivated Software Developer with over 4 years of professional experience in .Net Web/Windows applications development.Experienced working with agile methodology and sprint-based development with strong analytical, debugging & problem-solving skills.
+Excellent communication skills with strong background, working directly with clients to identify business objectives and establish requirements.Ability to adapt new technologies and perform at high level to meet deadlines, adapt to ever changing priorities effective in working independently as well in teams." />
 <meta name="twitter:image" content="https://res.cloudinary.com/dd9qptaih/image/upload/v1537312806/monika-info_h700Xw1200.png" />
-<meta name="description" content="I am a Full Stack Developer and CHARUSAT alumnus.The succulent, design, people &amp; technology are core to all my personal and professional ambitions." />
+<meta name="description" content="A Self-motivated Software Developer with over 4 years of professional experience in .Net Web/Windows applications development.Experienced working with agile methodology and sprint-based development with strong analytical, debugging & problem-solving skills.
+Excellent communication skills with strong background, working directly with clients to identify business objectives and establish requirements.Ability to adapt new technologies and perform at high level to meet deadlines, adapt to ever changing priorities effective in working independently as well in teams." />
   
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.1.0/css/all.css'>
