--- a/index.html
+++ b/index.html
@@ -151,28 +151,28 @@ Excellent communication skills with strong background, working directly with cli
   </div>
 </section>
                                                  
-<section id="pastime">
-  <div class="container text-center">
-    <div class="row align-center my-auto">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 justify-content-center  pt-5 py-5">
-        <h2 class="section-title text-decoration-background  ">
-          <p><strong>In the Lab time</strong></p>
-        </h2>
-        <p>I can be found at nearest park with my infinitely patient husband if I am not busy working on my side projects. </p>
-      </div>
-    </div>
-  </div>
+<!-- <section id="pastime"> -->
+  <!-- <div class="container text-center"> -->
+    <!-- <div class="row align-center my-auto"> -->
+      <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 justify-content-center  pt-5 py-5"> -->
+        <!-- <h2 class="section-title text-decoration-background  "> -->
+          <!-- <p><strong>In the Lab time</strong></p> -->
+        <!-- </h2> -->
+        <!-- <p>I can be found at nearest park with my infinitely patient husband if I am not busy working on my side projects. </p> -->
+      <!-- </div> -->
+    <!-- </div> -->
+  <!-- </div> -->
 
-  <div class="container-fluid" id="pen-Gallary">
-    <div class="row align-center">
+  <!-- <div class="container-fluid" id="pen-Gallary"> -->
+    <!-- <div class="row align-center"> -->
       
 
-    </div>
+    <!-- </div> -->
 
    
-  </div>
+  <!-- </div> -->
 
-</section>
+<!-- </section> -->
 
 <footer id="contact">
   <div class="container text-center">
